# mcp-serv

./: .gitignore  ADMIN_SERVER_DEPLOYMENT_PLAN.md  BETA_TEST_REPORT.md  COMPLETE_IMPLEMENTATION_REFERENCE.md  CONTEXT_CONTINUATION.md  CURRENT_STATUS.md  Caddyfile  DEPLOYMENT_VERIFICATION.txt  DEV_COMPLETION_CHECKLIST.md  DEV_KALI_VALIDATION.md  DEV_TRAINING_VALIDATION.md  Dockerfile  FINAL_VERIFICATION.md  FT_MODEL_INTEGRATION_REPORT.md  GGUF_CONVERSION_REPORT.md  GITHUB_UPLOAD_SUMMARY.md  GIT_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_STATUS.md  MAINTENANCE.md  MCP_SETUP_COMPLETE.md  PERSRM_INTEGRATION_REPORT.md  README.md  RELEASE_NOTES.md  REMOTE_ACCESS_SETUP.md  SERVER_SETUP_README.md  SETUP_COMPLETE.md  TRAINING_SUBMISSION_GUIDE.md  VERIFY_MCP.txt  WHY_NO_CODE_ON_GITHUB.md  caddy.service  chatos  continue_from_here.md  docker-compose.yml  install.sh  mcp.json  mcp_config_macos.json  mcp_memories_report.txt  push_to_github.sh  pyproject.toml  requirements-training.txt  (+5 more)
ChatOS/: __init__.py  app.py  config.py  requirements.txt  schemas.py
ChatOS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chatos_backend/: __init__.py  app.py  config.py  requirements.txt  schemas.py
cli/: chatos  hf-trading  trading
config/: .env.development  .env.production
context/: DECISIONS.md  MEMORY.md
data/: memories.db
docs/: AGI_ARCHITECTURE_OVERVIEW.md  AGI_COMPLETION_REPORT.md  API_NOTES.md  BEGINNER_QUICKSTART_AGI.md  CHANGELOG_AGI.md  CROSS_OS_UPDATE_PIPELINE.md  DIARY_USER_GUIDE.md  MAC_SETUP.md  SETUP_AND_LAUNCH.md  TRAINING.md  TRAINING_SUBMISSION_UI.md  UAT_TEST_CASES.md  minimax_local_setup.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
mcp/: __init__.py  agent_integration.py  classifier.py  codex_client.py  engineer_tools.py  extension_context.py  memory_store.py  models.py  path_sandbox.py  repo_memory.py  server.py  setup.py  sync_client.py  sync_config.py  sync_daemon.py  sync_schema.py  verdent_client.py
plans/: senior_engineer_mcp_harden_enhance.plan.md
sandbox-ui/: README.md  next.config.ts  package-lock.json  package.json
scrapers/: Dockerfile.scraper  aggr_scraper.py  coinglass_scraper.py  news_scraper.py  (+2 more)
(+875 files in other folders)
